--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/clerk-expo": "^0.20.1",
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
+    "expo-linking": "^6.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "expo-web-browser": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
