--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
     "expo-linking": "^6.0.0",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "expo-web-browser": "~12.3.2"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
